# server/controllers/itinarieController.js
@@ -6,8 +6,17 @@ const Destination = db.Destination;
 
 
 exports.itinariesList = async function (req, res) {
-    await Itinaries.findAll()
+    let listformatted = [];
+    await Itinaries.findAll({
+        include: [{
+            model: Itinaries_User,
+            include: [{
+                model: User
+            }]
+        }]
+    })
         .then(data => {
+            listformatted.push()
             console.log("All itinaries:", JSON.stringify(data, null, 2));
             res.json(data);
         })
@@ -16,11 +25,101 @@ exports.itinariesList = async function (req, res) {
         })
 }
 
+// exports.itinariesListFormatted = async function (req, res) {
+//     let listformatted = [];
+//     await Itinaries.findAll({
+//         include: [{
+//             model: Itinaries_User,
+//             include: [{
+//                 model: User,
+//                 // attributes: ['email'] // Add this line to select only the email attribute of the User model
+//             }]
+//         }]
+//     })
+//         .then(data => {
+//             data.forEach(itinerary => {
+//                 let itineraryObj = {
+//                     "itinaries_id": itinerary.itinaries_id,
+//                     "startAddress": itinerary.startAddress,
+//                     "seats": itinerary.seats,
+//                     "destination": itinerary.destination,
+//                     "createdAt": itinerary.createdAt,
+//                     "updatedAt": itinerary.updatedAt,
+//                     "startDate": itinerary.startDate,
+//                     "hours": itinerary.hours
+//                 };
+//                 itinerary.itinaries_users.forEach(user => {
+//                     itineraryObj['email'] = user.user.email; // Add the email attribute of the User model to the itinerary object
+//                 });
+//                 listformatted.push(itineraryObj);
+//             });
+//             console.log("All itinaries:", JSON.stringify(listformatted, null, 2));
+//             res.json(listformatted);
+//         })
+//         .catch(err => {
+//             res.status(500).json({ message: err.message })
+//         })
+// }
+
+exports.itinariesListFormatted = async function (req, res) {
+    let listformatted = [];
+    await Itinaries.findAll({
+        include: [
+            {
+                model: Itinaries_User,
+                include: [
+                    {
+                        model: User,
+                    },
+                ],
+            },
+        ],
+    })
+        .then((data) => {
+            data.forEach((itinerary) => {
+                let conductorEmail = '';
+                let passengerEmails = [];
+
+                itinerary.itinaries_users.forEach((user) => {
+                    if (user.type_user === 'conductor') {
+                        conductorEmail = user.user.email;
+                    } else if (user.type_user === 'passenger') {
+                        passengerEmails.push(user.user.email);
+                    }
+                });
+
+                let itineraryObj = {
+                    itinaries_id: itinerary.itinaries_id,
+                    startAddress: itinerary.startAddress,
+                    seats: itinerary.seats,
+                    destination: itinerary.destination,
+                    createdAt: itinerary.createdAt,
+                    updatedAt: itinerary.updatedAt,
+                    startDate: itinerary.startDate,
+                    hours: itinerary.hours,
+                    conductorEmail: conductorEmail,
+                    passengerEmails: passengerEmails,
+                };
+
+                listformatted.push(itineraryObj);
+            });
+
+            console.log('All itinaries:', JSON.stringify(listformatted, null, 2));
+            res.json(listformatted);
+        })
+        .catch((err) => {
+            res.status(500).json({ message: err.message });
+        });
+};
+
+
 exports.itinarieCreate = async (req, res) => {
     let itinarie = Itinaries.build({
-        fk_destination: req.body.fk_destination,
+        destination: req.body.destination,
         startAddress: req.body.startAddress,
-        seats: req.body.seats
+        seats: req.body.seats,
+        startDate: req.body.startDate,
+        hours: req.body.hours,
     })
     await itinarie.save()
         .then(data => {
@@ -43,10 +142,40 @@ exports.itinariesBystartAddress = async function (req, res) {
         })
 }
 
-exports.itinariesByAddress = async function (req, res) {
-    await Itinaries.findAll({ where: { address: req.params.address } })
+exports.itinariesByEmail = async function (req, res) {
+    await Itinaries.findAll({
+        include: [{
+            model: Itinaries_User,
+            include: [{
+                model: User,
+                attribute: ['email'],
+                where: { email: req.params.email }
+            }]
+        }]
+    })
         .then(data => {
-            console.log(`All itinaries with :${req.params.address} in params`, JSON.stringify(data, null, 2));
+            console.log(data);
+            console.log(`All itinaries with :${req.params.email} in params`, JSON.stringify(data, null, 2));
+            res.json(data);
+        })
+        .catch(err => {
+            res.status(500).json({ message: err.message })
+        })
+}
+
+exports.itinariesByDestination = async function (req, res) {
+    await Itinaries.findAll({
+        include: [{
+            model: Itinaries_User,
+            include: [{
+                model: User,
+                attribute: ['email'],
+                where: { email: req.params.email }
+            }]
+        }]
+    })
+        .then(data => {
+            console.log(`All itinaries with :${req.params.destination} in params`, JSON.stringify(data, null, 2));
             res.json(data);
         })
         .catch(err => {
