# server/models/itinariesModel.js
@@ -10,7 +10,10 @@ const Itinaries = db.define('itinaries', {
     },
     // fk_destination: { type: Sequelize.STRING, allowNull: false },
     startAddress: { type: Sequelize.STRING, allowNull: false },
-    seats: { type: Sequelize.INTEGER, allowNull: false }
+    seats: { type: Sequelize.INTEGER, allowNull: false },
+    destination: { type: Sequelize.STRING, allowNull: false },
+    startDate: { type: Sequelize.STRING, allowNull: false },
+    hours: { type: Sequelize.STRING, allowNull: false }
 })
 
 module.exports = Itinaries
